signUp API完成
