# backend/api/infrastructure/firebase/firebase.go
@@ -1,8 +1,13 @@
 package firebase
 
 import (
+	"bytes"
 	"context"
+	"encoding/json"
 	"fmt"
+	"io"
+	"net/http"
+	"os"
 	"strings"
 
 	firebase "firebase.google.com/go/v4"
@@ -77,19 +82,84 @@ func (fa *FirebaseAuth) GetUser(ctx context.Context, uid string) (*auth.UserReco
 	return user, nil
 }
 
-// CreateUser はユーザーを作成します
-func (fa *FirebaseAuth) CreateUser(ctx context.Context, email, password string) (*auth.UserRecord, error) {
-	params := (&auth.UserToCreate{}).
-		Email(email).
-		EmailVerified(false).
-		Password(password)
+func (fa *FirebaseAuth) DeleteUser(ctx context.Context, uid string) error {
+	if err := fa.auth.DeleteUser(ctx, uid); err != nil {
+		return err
+	}
 
-	user, err := fa.auth.CreateUser(ctx, params)
-	if err != nil {
+	return nil
+}
+
+type SignUpResponse struct {
+	IDToken      string `json:"idToken"`
+	Email        string `json:"email"`
+	RefreshToken string `json:"refreshToken"`
+	ExpiresIn    string `json:"expiresIn"`
+	LocalID      string `json:"localId"`
+}
+
+type signUpRequestWithEmailPassword struct {
+	Email             string `json:"email"`
+	Password          string `json:"password"`
+	ReturnSecureToken bool   `json:"returnSecureToken"`
+}
+
+func (fa *FirebaseAuth) SignUpWithEmailPassword(ctx context.Context, email, password string) (*SignUpResponse, error) {
+	firebaseAPIKey := os.Getenv("FIREBASE_API_KEY")
+
+	reqBody := &signUpRequestWithEmailPassword{
+		Email:             email,
+		Password:          password,
+		ReturnSecureToken: true,
+	}
+	url := fmt.Sprintf("https://identitytoolkit.googleapis.com/v1/accounts:signUp?key=%s", firebaseAPIKey)
+
+	signUpResponse := &SignUpResponse{}
+	if err := fa.callPost(ctx, url, reqBody, &signUpResponse); err != nil {
 		fmt.Println(err, "infra:firebaseのユーザー作成に失敗しました")
-
+		
 		return nil, err
 	}
 
-	return user, nil
+	return signUpResponse, nil
+}
+
+func (fa *FirebaseAuth) callPost(ctx context.Context, url string, reqBody any, respBody interface{}) error {
+	jsonData, err := json.Marshal(reqBody)
+	if err != nil {
+		fmt.Println(err, "infra:firebaseのリクエストボディのJSON変換に失敗しました")
+
+		return err
+	}
+
+	req, err := http.NewRequestWithContext(ctx, http.MethodPost, url, bytes.NewBuffer(jsonData))
+	if err != nil {
+		fmt.Println(err, "infra:firebaseのリクエスト作成に失敗しました")
+
+		return err
+	}
+
+	resp, err := http.DefaultClient.Do(req)
+	if err != nil {
+		fmt.Println(err, "infra:firebaseのリクエスト送信に失敗しました")
+
+		return err
+	}
+
+	defer resp.Body.Close()
+
+	body, err := io.ReadAll(resp.Body)
+	if err != nil {
+		fmt.Println(err, "infra:firebaseのレスポンスボディの読み込みに失敗しました")
+
+		return err
+	}
+
+	if err := json.Unmarshal(body, &respBody); err != nil {
+		fmt.Println(err, "infra:firebaseのレスポンスボディのJSON変換に失敗しました")
+
+		return err
+	}
+
+	return nil
 }
